# RCurl

./: .Rbuildignore  .Rinstignore  .gitignore  Changes.html  DESCRIPTION  FAQ.html  GNUmakefile  LICENSE  NAMESPACE  README  README.windows  Todo.html  cacert.pem  cleanup  config.status  configure  configure.in  configure.win  cookies.R  hang.R  manyConnections.R  postFormEg.R  testCFile.R  utf.c
CodeGeneration/: GNUmakefile  auth.c  enum.c  enum.c.001t.tu  enum.c.t00.tu  generate.R
Experiments/: binary.R  binary1.R
R/: aclassesEnums.R  binary.S  classes.S  curl.S  curlAuthConstants.R  curlError.R  curlInfo.S  dynamic.R  form.S  getFormParams.R  getURLContent.R  header.R  http.R  iconv.R  info.S  mime.R  multi.S  options.S  support.S  upload.R  urlExists.R  xbits.R  zclone.R
Web/: GNUmakefile  config.status  configure  configure.in  index.html  index.html.in
Web/autom4te.cache/: output.0  traces.0
inst/doc/: GNUmakefile  RCurl.tex  curlCommandLine.xml
inst/enums/: GNUmakefile
inst/examples/: GNUmakefile  concurrent.xml  cookies.R  nestedHTML.xml  xmlParse.xml
man/: AUTH.Rd  CFILE.Rd  CURLHandle-class.Rd  CurlFeatureBits.Rd  HTTP_VERSION_1_0.Rd  MultiCURLHandle-class.Rd  RCurl-internal.Rd  base64.Rd  basicHeaderGatherer.Rd  basicTextGatherer.Rd  binaryBuffer.Rd  chunkToLineReader.Rd  clone.Rd  complete.Rd  curlError.Rd  curlEscape.Rd  curlGlobalInit.Rd  curlOptions.Rd  curlPerform.Rd  curlSetOpt.Rd  curlVersion.Rd  dynCurlReader.Rd  enums.Rd  fileUpload.Rd  findHTTPHeaderEncoding.Rd  ftpUpload.Rd  getBinaryURL.Rd  getBitIndicators.Rd  getCurlErrorClassNames.Rd  getCurlHandle.Rd  getCurlInfo.Rd  getFormParams.Rd  getURIAsynchronous.Rd  getURL.Rd  guessMIMEType.Rd  httpPUT.Rd  isBinaryContent.Rd  merge.list.Rd  mimeTypeExtensions.Rd  postForm.Rd  (+3 more)
src/: CURLINFOTable.h  CURLOptTable.h  CurlErrorEnums.h  CurlInfoEnums.h  CurlOptEnums.h  Makevars  Makevars.in  Makevars.win  Rcurl.h  b64IntArray.c  base64.c  curl.c  curl.c-expt  curlInit.c  curl_base64.c  enums.c  json.c  memoryManagement.c  myUTF8.c
tests/: amazon3.R  binaryPost.R  biomart.R  downloadToConnection.R  dynCurlReader.R  dynSetReader.R  formUpload.R  ftpUpload.R  info.R  jpeg.R  multi.R  multi2.R  multi3.R  multi4.R  multiPost.R  multi_basic.R  post.R  postFormBinary.R
